# EI3001

./: README.md
anti_instagram/: .autogenerated.md  README.md
anti_instagram/launch/: cont_anti_instagram_node.launch  image_transformer_node.launch
anti_instagram/scripts/: plot_rgb.py
anti_instagram/src/: cont_anti_instagram_node.py  image_transformer_node.py  old_anti_instagram_node.py
anti_instagram/tests/: antiinstagram_performance_test.py  decode_test.py
duckietown/: .autogenerated.md
duckietown/launch/: apriltags2.launch  calibration_calc.launch  intersection_navigation_localization.launch  intersection_navigation_localization_onboard.launch  make_log.launch  make_log_docker.launch  multivehicle_detection.launch  vehicle_camera_detection_filter_control.launch  vehicle_camera_detection_filter_control_joystick.launch  vehicle_detection_filter.launch
duckietown_description/: asd.sh  tags_duckietown.csv  tags_duckietown_test.csv  tags_test_map.csv  tags_vineyard.csv  tiles_duckietown.csv  tiles_vineyard.csv
duckietown_description/launch/: duckietown_description_node.launch
duckietown_description/rviz/: rviz_default.rviz
duckietown_description/urdf/: duckiebot.urdf.xacro  macros.urdf.xacro  test2.urdf.xacro  test_map.urdf.xacro  vineyard.urdf.xacro
lane_filter/: README.md
lane_filter/launch/: lane_filter_node.launch
lane_filter/src/: fakenode.py  lane_filter_node.py
line_detector/launch/: line_detector_node.launch
line_detector/src/: line_detector_node.py
localization/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
(+222 files in other folders)
