<?xml version="1.0"?>
<package>
  <name>localization</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `localization` in `package.xml`.</description>

  <author email="teddy@todo.todo">teddy</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>apriltags</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>

  <test_depend>gtest</test_depend>


</package>
